# zeroreq

./: Cargo.toml  Makefile  README.md
.github/workflows/: release-macos.yml
crates/collection/: Cargo.toml
crates/collection/src/: collection.rs  entry.rs  lib.rs  request.rs
crates/environment/: Cargo.toml
crates/environment/src/: environment.rs  lib.rs  registry.rs
crates/theme/: Cargo.toml  build.rs
crates/theme/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: layout.rs  lib.rs  window_options.rs  workspace.rs
crates/workspace/src/layout/: bottom_panel.rs  sidebar.rs  top_panel.rs
crates/zeroreq/: Cargo.toml
crates/zeroreq/src/: main.rs  zeroreq.rs
crates/zeroreq/src/zeroreq/: about.rs  actions.rs  menu.rs  quit.rs  updater.rs  window_options.rs
packaging/macos/: AppIcon.icns  Info.plist
scripts/: build-macos.sh  package-macos.sh
