[package]
name = "workspace"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
reqwest_client.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
raw-window-handle.workspace = true
