[package]
name = "zeroreq"
version = "0.1.2"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
reqwest_client = { git = "https://github.com/zed-industries/zed" }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smol = "2"
zeroreq-theme = { package = "theme", path = "../theme" }
