[package]
name = "zeroreq"
version = "0.1.2"
edition = "2024"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
reqwest_client.workspace = true
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
smol = "2"
zeroreq-theme = { package = "theme", path = "../theme" }
workspace = { package = "workspace", path = "../workspace" }
